pkg/controller/networkpolicy/testdata/networkpolicy/externalname/input.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    acorn.io/app-name: my-app
    acorn.io/app-namespace: acorn
    acorn.io/managed: "true"
    acorn.io/service-name: my-service
  name: service-7777
  namespace: other-namespace
spec:
  rules:
    - host: myhostname.oss-acorn.io
      http:
        paths:
          - backend:
              service:
                name: service-7777
                port:
                  number: 7777
            path: /seven
            pathType: Prefix
